correctly text align mission text

--- a/src/components/PeponiLogo/PeponiLogo.css
+++ b/src/components/PeponiLogo/PeponiLogo.css
@@ -1,9 +1,5 @@
 /** @format */
 
-/* .container {
-	padding-top: 10px;
-} */
-
 .home__hero-section {
 	color: #fff;
 }
